--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "sass --watch ./_assets/sass/style.scss:./_assets/output-css/style.css",
     "sass": "sass ./_assets/sass/style.scss:./_assets/output-css/style.css",
-    "start": "jekyll serve"
+    "start": "bundle exec jekyll serve",
+    "build": "bundle exec jekyll build --trace"
   },
   "repository": {
     "type": "git",
