--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "sass --watch ./_assets/sass/style.scss:./_assets/output-css/style.css",
-    "sass": "sass ./_assets/sass/style.scss:./_assets/output-css/style.css",
+    "watch": "sass --watch ./assets/sass/style.scss:./assets/output-css/style.css",
+    "sass": "sass ./assets/sass/style.scss:./assets/output-css/style.css",
     "start": "bundle exec jekyll serve",
     "build": "bundle exec jekyll build --trace"
   },
