--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "sass --watch ./assets/sass/style.scss:./assets/output-css/style.css",
     "sass": "sass ./assets/sass/style.scss:./assets/output-css/style.css",
     "start": "bundle exec jekyll serve",
-    "build": "bundle exec jekyll build --trace"
+    "build": "bundle exec jekyll build"
   },
   "repository": {
     "type": "git",
