--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/mdx": "^1.1.5",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.3",
-    "astro": "^3.5.4"
+    "@astrojs/tailwind": "^5.0.3",
+    "astro": "^3.5.4",
+    "tailwindcss": "^3.4.0"
   }
 }
