--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "npx eslint --fix src/scripts/script.js"
+    "lint": "npx eslint --fix src/scripts/script.js",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@astrojs/mdx": "^1.1.5",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint-plugin-import": "^2.29.1",
+    "husky": "^8.0.0"
   }
 }
